@@ -378,6 +378,14 @@
     }
   }
 
+  \subsection{C-LEVEL FACILITIES}{
+    \itemize{
+      \item \code{.C()} now passes a pairlist as a \code{SEXP} to the
+      compiled code.  This is documented, but pairlists were if fact
+      handled differently as a legacy from the early days of \R.
+    }
+  }
+  
   \subsection{BUG FIXES}{
     \itemize{
       \item \code{str(x, width)} now obeys its \code{width}
